--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Restore packages (MSBuild)
       run: dotnet msbuild RemoteDriveClient.sln -t:Restore -p:Platform=x86
 
-    - name: Build
-      run: dotnet build RemoteDriveClient.sln --no-restore -p:Platform=x86
+    - name: Build (MSBuild)
+      run: dotnet msbuild RemoteDriveClient.sln --no-restore -p:Platform=x86 
 
     - name: Test
       run: dotnet test RemoteDriveClient.sln --no-build --verbosity normal -p:Platform=x86
