--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,40 @@
 name: .NET Core CI
 
-
 on:
-  push: 
+  push:
     branches: [ "master" ]
-  pull_request: 
+  pull_request:
     branches: [ "master" ]
 
 jobs:
   build-and-test:
-    
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-latest] 
+   
+    runs-on: windows-latest
 
     steps:
     
     - name: Checkout code
       uses: actions/checkout@v4
 
-    
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0.x' 
+        dotnet-version: '8.0.x'
 
     
-    - name: Build (MSBuild)
-      run: dotnet msbuild RemoteDriveClient.sln -p:Platform=x86
+    - name: Download nuget.exe
+      run: |
+        Invoke-WebRequest -Uri https://dist.nuget.org/win-x86-commandline/latest/nuget.exe -OutFile nuget.exe
+      shell: pwsh 
 
-    - name: Build (MSBuild)
-      run: dotnet msbuild RemoteDriveClient.sln --no-restore -p:Platform=x86 
 
+    - name: Restore packages (nuget.exe)
+      run: ./nuget.exe restore RemoteDriveClient.sln
+
+   
+    - name: Build (MSBuild)
+      run: dotnet msbuild RemoteDriveClient.sln -p:Platform=x86 -p:RestorePackages=false
+
+    
     - name: Test
       run: dotnet test RemoteDriveClient.sln --no-build --verbosity normal -p:Platform=x86
