Enhance CI workflow with test results upload
Added upload step for test results and modified test command to log results.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,9 @@ on:
 
 jobs:
   build-and-test:
-   
     runs-on: windows-latest
 
     steps:
-    
     - name: Checkout code
       uses: actions/checkout@v4
 
@@ -21,20 +19,23 @@ jobs:
       with:
         dotnet-version: '8.0.x'
 
-    
     - name: Download nuget.exe
       run: |
         Invoke-WebRequest -Uri https://dist.nuget.org/win-x86-commandline/latest/nuget.exe -OutFile nuget.exe
-      shell: pwsh 
-
+      shell: pwsh
 
     - name: Restore packages (nuget.exe)
       run: ./nuget.exe restore RemoteDriveClient.sln
 
-   
     - name: Build (MSBuild)
       run: dotnet msbuild RemoteDriveClient.sln -p:Platform=x86 -p:RestorePackages=false
 
-    
     - name: Test
-      run: dotnet test RemoteDriveClient.sln --no-build --verbosity normal -p:Platform=x86
+      run: dotnet test RemoteDriveClient.sln --no-build --verbosity normal -p:Platform=x86 --logger "trx;LogFileName=test-results.trx"
+
+    - name: Upload test results
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results 
+        path: test-results.trx 
+      if: always() 
