--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: test-results 
-        path: test-results.trx 
+        path: "**/test-results.trx"
       if: always() 
